controls/terraform-best-practices/eks/check-control-plane-logging.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-control-plane-logging
  annotations:
    policies.kyverno.io/title: Check Control Plane Logging
    policies.kyverno.io/category: EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Enabling Amazon EKS control plane logging for all log types is a best practice 
      for enhancing the security, monitoring, troubleshooting, performance optimization, and operational management of your Kubernetes clusters. 
      By capturing comprehensive logs of control plane activities, you can effectively manage and secure your 
      EKS infrastructure while ensuring compliance with regulatory requirements and industry standards.
spec:
  rules:
    - name: check-control-plane-logging
      match:
        all:
        - (cluster.arn != null): true
      assert:
        all:
        - message: EKS control plane logging must be enabled for all log types
          check:
            cluster: 
              logging:
                (clusterLogging[?enabled == `true`] | length(@) == `1`): true # If all logging types are enabled, there will only be one element in the clusterLogging array with enabled set to true
                ~.(clusterLogging[?enabled == `true`]):
                    (types):
                        (contains(@, 'api') && contains(@, 'audit') && contains(@, 'authenticator') && contains(@, 'controllerManager') && contains(@, 'scheduler')): true
