controls/terraform-best-practices/eks/check-public-access-cidr.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-public-access-cidr
  annotations:
    policies.kyverno.io/title: Check Public Access Cidr
    policies.kyverno.io/category: EKS Best Practices
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Ensuring that the Amazon EKS public endpoint is not accessible to 0.0.0.0/0 is a fundamental security measure that helps protect your EKS clusters from unauthorized access, security threats, and compliance violations.
spec:
  rules:
    - name: check-public-access-cidr
      match:
        all:
        - (cluster.arn != null): true
      assert:
        all:
        - message: Ensuring that the Amazon EKS public endpoint is not accessible to 0.0.0.0/0
          check:
            cluster:
              resourcesVpcConfig:
                ((endpointPublicAccess == `false`) || (endpointPublicAccess == `true` && publicAccessCidrs[?@ == '0.0.0.0/0'] | length(@) == `0`)): true
